# Agent-weave

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: custom_tools.py  multi_agent.py  quickstart.py
src/agent_weave/: __init__.py  agent.py  cli.py  config.py  errors.py  guardrails.py  models.py  react.py  team.py  tool.py
src/agent_weave/llm/: __init__.py  anthropic_backend.py  base.py  openai_backend.py
src/agent_weave/memory/: __init__.py  base.py  conversation.py
tests/: test_agent.py  test_guardrails.py  test_memory.py  test_react.py  test_team.py  test_tool.py
